# SlideApp0.1

./: .gitignore  CMakeLists.txt  SlideAppBeta.spec  ihc slide.ai
db/: schema.sql  slideapp.db
docs/: HOUSEKEEPING.md  openapi.yaml
exports/: 2026-02-17_chetan_78c5f03e.json  2026-02-17_chetan_f882ed68.json
pyapp/: __init__.py  antibody_rules.py  dashboard_window.py  database.py  experiment_setup_window.py  final_slide_book_window.py  home_window.py  main.py  master_mix_window.py  primaries - Sheet1.csv  runtime_paths.py  secondaries - Sheet1.csv  secondary_master_mix_window.py  secondary_rules.py  secondary_tree_canvas_window.py  slide_library_window.py  tree_canvas_window.py
schemas/: experiment-record.schema.json  slide-record.schema.json
schemas/examples/: experiment-record.example.json
src/: HomeWindow.cpp  HomeWindow.h  main.cpp
